<resources>
    <string name="app_name">Quiz App</string>
    <string name="question_no">Question 1</string>
    <string name="question_description">Identify the image given in the question and select the best option:</string>
    <string name="home_greetings">Welcome ;)</string>
    <string name="home_instructions">Please enter your name!</string>
    <string name="home_name">Name</string>
    <string name="home_start">Start</string>
    <string name="final_exit_app">Exit APP</string>
    <string name="final_play_again">Play again</string>
    <string name="hello_there">HELLO THERE</string>
    <string name="your_score">Your score:</string>
    <string name="_0">0</string>
</resources>