<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Results"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/hello_there"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="200dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/your_score"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/btn_replay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/final_play_again"
        android:textSize="28sp"
        android:layout_marginBottom="0dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/final_exit_app"
        android:textSize="28sp" />

</LinearLayout>